// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepareNotification() should configured generate ID function if ID is not set 1`] = `
{
  "calls": [
    [
      {
        "message": "hello",
      },
    ],
  ],
  "contexts": [
    {
      "customizeNotification": null,
      "defaultProps": {},
      "generateId": [MockFunction] {
        "calls": [
          [
            {
              "message": "hello",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": "foo",
          },
        ],
      },
    },
  ],
  "instances": [
    {
      "customizeNotification": null,
      "defaultProps": {},
      "generateId": [MockFunction] {
        "calls": [
          [
            {
              "message": "hello",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": "foo",
          },
        ],
      },
    },
  ],
  "invocationCallOrder": [
    1,
  ],
  "lastCall": [
    {
      "message": "hello",
    },
  ],
  "results": [
    {
      "type": "return",
      "value": "foo",
    },
  ],
}
`;

exports[`prepareNotification() should customize notification with configured function 1`] = `
{
  "buttons": [],
  "foo": "bar",
  "id": "1",
  "message": "hello",
  "status": "none",
}
`;

exports[`prepareNotification() should customize notification with configured function 2`] = `
{
  "calls": [
    [
      {
        "buttons": [],
        "foo": "bar",
        "id": "1",
        "message": "hello",
        "status": "none",
      },
    ],
  ],
  "contexts": [
    {
      "customizeNotification": [MockFunction] {
        "calls": [
          [
            {
              "buttons": [],
              "foo": "bar",
              "id": "1",
              "message": "hello",
              "status": "none",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": "bar",
          },
        ],
      },
      "defaultProps": {},
      "generateId": [Function],
    },
  ],
  "instances": [
    {
      "customizeNotification": [MockFunction] {
        "calls": [
          [
            {
              "buttons": [],
              "foo": "bar",
              "id": "1",
              "message": "hello",
              "status": "none",
            },
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": "bar",
          },
        ],
      },
      "defaultProps": {},
      "generateId": [Function],
    },
  ],
  "invocationCallOrder": [
    2,
  ],
  "lastCall": [
    {
      "buttons": [],
      "foo": "bar",
      "id": "1",
      "message": "hello",
      "status": "none",
    },
  ],
  "results": [
    {
      "type": "return",
      "value": "bar",
    },
  ],
}
`;

exports[`prepareNotification() should only set default and configured attributes if not set 1`] = `
{
  "allowHTML": true,
  "buttons": [],
  "dismissible": true,
  "id": "1",
  "status": "success",
}
`;

exports[`prepareNotification() should set default attributes if not set 1`] = `
{
  "buttons": [],
  "id": "1",
  "status": "none",
}
`;
